# The-TruFiTi-Group

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.txt  pyproject.toml  reading_models.ipynb  script.py
.github/workflows/: ci.yml
data/: data.txt
models/: bigram_L2_0.5M_26-01-18_20-46-19_metrics.json  bigram_L2_0.5M_26-01-18_22-12-13_metrics.json  bigram_L2_0.5M_26-01-23_20-42-46.pt  bigram_L2_0.5M_26-01-23_20-42-46_metrics.json  bigram_L2_0.5M_26-01-24_14-12-22.pt  bigram_L2_0.5M_26-01-24_14-12-22_metrics.json  bigram_model.pt  gru_L2_1.9M_26-01-26_23-56-51_metrics.json  gru_L2_2.2M_26-01-18_22-36-12_metrics.json  reading_models.ipynb  run_transformer_rope_6.8M.wandb  run_transformer_sinusoidal_6.8M.wandb  transformer_1.0M.pt  transformer_1.0M_metrics.json  transformer_1.6M_metrics.json  transformer_1.8M_metrics.json  transformer_2.0M_metrics.json  transformer_2025-12-16_20:24:47.232734_1.8M_metrics.json  transformer_2025-12-17_17-38-54_1.8M_metrics.json  transformer_4.8M_metrics.json  transformer_5.3M_metrics.json  transformer_6.3M_metrics.json  transformer_6.3M_old_metrics.json  transformer_6.8M_metrics.json  transformer_6.9M_metrics.json  transformer_L1_1.8M_25-12-22_15-37-50_metrics.json  transformer_L1_1.8M_26-01-03_00:07:05_metrics.json  transformer_L1_big_rope_ffn4x_L1_8.4M_26-01-28_08-13-07_metrics.json  transformer_L1_rope_ffn4x_L1_0.7M_26-01-28_07-38-02.pt  transformer_L1_rope_ffn4x_L1_0.7M_26-01-28_07-38-02_metrics.json  transformer_L2_0.6M_26-01-23_21-24-13_metrics.json  transformer_L2_0.7M_26-01-23_21-06-36.pt  transformer_L2_0.7M_26-01-23_21-06-36_metrics.json  transformer_L2_0.7M_26-01-23_21-39-37.pt  transformer_L2_0.7M_26-01-23_21-39-37_metrics.json  transformer_L2_1.8M_25-12-22_16-43-46_metrics.json  transformer_L2_1.8M_26-01-03_00:48:38_metrics.json  transformer_L2_1.8M_26-01-18_21-34-17_metrics.json  transformer_L2_1.8M_26-01-18_22-08-03_metrics.json  transformer_baseline_L2_0.7M_26-01-24_14-06-34.pt  (+10 more)
paper/: 00_main.tex  00_titlepage.tex  01_introduction.tex  02_data.tex  03_model.tex  06_conclusion.tex  appendix.tex  preamble.sty  references.bib
src/: data-filter.py  mvp.py  tokenizer.py
src/config/: __init__.py  bigram.yml  bigram_default.yml  config.py  gru.yml  gru_default.yml  training_config.py  transformer_L1_big_rope_ffn4x.yml  transformer_L1_rope_ffn4x.yml  transformer_baseline.yml  transformer_big_rope_ffn4x.yml  transformer_default.yml  transformer_large.yml  transformer_large_rope.yml  transformer_rope_ffn2x.yml  transformer_rope_ffn4x.yml  transformer_small.yml  transformer_small_L1.yml  transformer_small_L2.yml  transformer_small_rope.yml  utils.py
src/data/: data_adjustment.py  data_analyse.ipynb  data_analyse_llm.ipynb  data_filter.py  data_helper.py  data_llm.py  data_llm_batched.py  data_mid_filter.py  data_omdb.py  data_post_filter.py  data_pre_filter.py  data_utils.py
src/dto/: config.py
src/enums/: __init__.py  checkpoint_keys.py  config_keys.py  tokenizer_type.py  training_keys.py  types.py
src/evaluation/: base_evaluation_metric.py  bert_score.py  distinct_n_metric.py  evaluate_model.py  evaluate_transformer.py  (+7 more)
tests/: test_bpe_tokenizer.py  test_char_tokenizer.py  test_data_adjustment.py  test_distict_n_metric.py  test_llm_as_judge.py  test_mauve_metric.py  test_meteor_metric.py  test_mvp.py  test_review_adjuster.py  test_rouge_n_metric.py  test_token_embedding.py  test_toxicty.py
tokenizer/: bpe_custom_L1_letterboxd_filtered.json  bpe_custom_L1_letterboxd_filtered_grammar_corrected.json  bpe_custom_L2_letterboxd_filtered.json  bpe_custom_L2_letterboxd_filtered_grammar_corrected.json  bpe_custom_tokenizer.json  bpe_hf_L1_letterboxd_filtered.json  bpe_hf_L1_letterboxd_filtered_0.95.json  bpe_hf_L1_letterboxd_filtered_enhanced_grammar+spelling.json  bpe_hf_L1_letterboxd_filtered_grammar_corrected.json  bpe_hf_L1_letterboxd_filtered_llm.json  bpe_hf_L1_letterboxd_filtered_llm_filtered.json  bpe_hf_L2_letterboxd_filtered.json  bpe_hf_L2_letterboxd_filtered_enhanced_grammar+spelling.json  bpe_hf_L2_letterboxd_filtered_grammar_corrected.json  bpe_hf_L2_letterboxd_filtered_llm.json  bpe_hf_L2_letterboxd_filtered_llm2_filtered.json  bpe_hf_letterboxd_filtered.json  bpe_hugging_face_tokenizer.json  char_tokenizer.json
(+61 files in other folders)
