[project]
name = "the-trufiti-group"
version = "0.1.0"
description = ""
authors = [
    { name = "Finn Eilmann" },
    { name = "Till Flotow" },
    { name = "Hoang Trung Nguyen" },
]
requires-python = ">=3.12,<3.15"
readme = "README.md"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0,<5",
    "ruff>=0.14.5,<0.15",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade (modernere Python-Syntax)
    "B",   # flake8-bugbear (findet häufige Bugs)
]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
